[package]
name = "crud"
version = "0.1.0"
edition = "2021"
[[bin]]
targets=main.rs
[dependencies]
tokio = {version = "1.36.0", features = ["full"]}
axum = "0.7.4"
serde_json = "1.0.113"
serde = { version = "1.0.196", features = ["derive"]}
sqlx = {version = "0.7.3", features= ["postgres", "macros", "runtime-tokio-native-tls"]}
